finish formatting correct spacing of first row in second flexbox

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -105,7 +105,7 @@
     border-top: 2px solid #2A2B2A;
     border-bottom: 1px solid #2A2B2A;
     list-style: none;
-    width: 70%;
+    width: 100%;
     border-right: 1px solid currentColor;
     transition: 0.5s ease;
     padding: 8px 0 0;
@@ -115,7 +115,23 @@
 }
 
 
+/* FIRST CHILD - MENU + CLOSE BUTTON */
+.menu-container .menu-row {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    width: 100%;
+    background-color: cadetblue;
+}
 
+.menu-title {
+    justify-content: flex-start;
+}
+
+.menu-close {
+    justify-content: flex-end;
+}
 
 .menu-container span {
     font-size: 22px;
